--- a/style.css
+++ b/style.css
@@ -1,57 +1,42 @@
 @charset "UTF-8";
-
-
 *{
-    margin: 0%;
-    
+    margin: 0%
 }
 @import url('https://fonts.googleapis.com/css2?family=Hubballi&display=swap');
 
 :root{
     ---fonnt-padrao: 'Hubballi', arial;
 }
-
-
-header{
-    height: auto;
-    background-color: black;
-    
-}
-header > div > h1{
-    display:block;
-    color: #DFB600;
-    font-family: var(---fonnt-padrao);
-    text-align: left;
-
-}
-.quadro{
-    display:  ;
-    margin-right: 12px;
-}
-span{
-    color: #000000;
-    
-}
-nav{
-    text-align: right;
-}
-nav > a{
-    color: #F23535;
-    padding-right: 5px;
-    text-decoration: none;
-    font-family: 'Hubballi', cursive;
-
+main{
+     height: auto;
+     width: 80vh;
+     margin: auto;
+     background-color: black;
+     padding: 20px;
+     margin-top: 10px;
+     border-radius: 10px;
 }
 body{
-    background-image: linear-gradient(to right, #000000, #DFB600, #000000);
+    background-image: linear-gradient(to bottom, black, darkred);
 }
-main{
-    background-color: white;
-    height: auto;
-    width: 900px;
+header{
+    background-color: black;
+}
+header > img{ 
+    display: block;
     margin: auto;
-    padding: 5px;
-    margin-top: 5px;
-    border-radius: 8px;
+    
+}
+header > h1{
+    font-variant: small-caps;
+    color: rgb(255, 145, 0);
+    text-align: center;
+}
+.quadro{
+    display: inline-block;
+    padding-right: 8px;
+}
+span{
+    color: rgb(255, 145, 0);
     
 }
